--- a/server/package.json
+++ b/server/package.json
@@ -16,4 +16,13 @@
     "express": "^5.1.0",
     "openai": "^5.9.0"
   }
+  {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+}
 }
