--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "chattermind",
   "version": "1.0.0",
-  "main": "server/server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
