--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - ./sentiment-api:/app
     working_dir: /app
 
   client:
@@ -31,7 +33,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:4000/api/chat/message
+      - REACT_APP_API_URL=http://server:4000/api/chat/message
     volumes:
       - ./client:/app
     working_dir: /app
