Prepare for Railway deployment

--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "openai": "^5.9.0"
+    "openai": "^5.9.0",
+    "uuid": "^11.1.0"
   }
 }
-
-
